--- a/CreateShopingList.xaml
+++ b/CreateShopingList.xaml
@@ -5,14 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyShopingList"
         mc:Ignorable="d"
-        Title="CreateShopingList" Height="450" Width="800">
+        Title="CreateShopingList" Height="500" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="200" />
         </Grid.ColumnDefinitions>
-
-        <Button x:Name="btnCreateList" Content="Create New List" Margin="10" Grid.Column="1" Click="CreateNewList" />
 
         <Grid Grid.Column="0" Margin="10">
             <Grid.RowDefinitions>
@@ -37,13 +35,14 @@
             <Label Content="Unit:" Margin="0,10,0,0" Grid.Row="4" />
             <TextBox x:Name="txtUnit" Width="200" Grid.Row="4" Text="{Binding Unit}" Margin="0,0,0,5" />
 
-            <Button x:Name="btnSubmit" Content="Add to Shopping List" Margin="190,20,190,0" Grid.Row="6" Click="AddProductToList" />
+            <Button x:Name="btnSubmit" Content="Add to Shopping List" Grid.Row="6" Click="AddProductToList" HorizontalAlignment="Center" VerticalAlignment="Top" />
         </Grid>
 
-        <ListBox x:Name="lstRecentProducts" Grid.Column="1" Margin="10" DisplayMemberPath="DisplayText" />
+        <ListBox x:Name="lstRecentProducts" Grid.Column="1" Margin="10,10,10,0" DisplayMemberPath="DisplayText" />
 
-        <Grid Grid.Column="1" Margin="10">
-            <Button x:Name="btnAddList" Content="Create New List" Width="180" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Click="CreateNewList" Margin="0,384,0,0" />
+        <Grid Grid.Column="1" Margin="10,10,10,0">
+            <Button x:Name="btnAddList" Content="Create New List" HorizontalAlignment="Stretch" Click="CreateNewList" VerticalAlignment="Bottom" />
         </Grid>
     </Grid>
+
 </Window>
